# smacktivity

./: Cargo.toml  README.md
eg/: darius.activity.json  darius.first.json  darius.outbox.json  units.json
lib/: Cargo.toml
lib/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
server/: Cargo.toml
smacktivity-macros/: Cargo.toml
smacktivity-macros/src/: lib.rs
src/: lib.rs  main.rs  network.rs
