[package]
name = "smacktivity"
version = "0.1.0"
edition = "2021"

default-run = "smacktivity"

[features]
reqwest = ["tokio", "tracing-subscriber", "dep:reqwest"]
default = ["reqwest"]

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
toml = "0.7.4"
url = { version = "2.4.0", features = ["serde"] }

tokio = { version = "1.28.2", features = ["tracing", "full"], optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
reqwest = { version = "0.11.18", features = ["json", "rustls", "tokio-rustls", "tokio-util"], optional = true }
async-recursion = "1.0.4"
tracing = "0.1.37"
