[workspace]
members = [
    "lib",
    "network",
    "server",
    "bin",
]

[workspace.dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
toml = "0.7.4"
url = { version = "2.4.0", features = ["serde"] }
tokio = { version = "1.28.2", features = ["tracing", "full"] }
tracing-subscriber = "0.3.17"
reqwest = { version = "0.11.18", features = ["json", "rustls", "tokio-rustls", "tokio-util"] }
async-recursion = "1.0.4"
tracing = "0.1.37"
argh = "0.1.10"
futures = "0.3.28"
heck = "0.4.1"
