[package]
name = "smacktivity-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

smacktivity = { path = "../lib" }
smacktivity-network = { path = "../network" }
